--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,18 @@ spring:
       cluster-nodes: 127.0.0.1:9300
       repositories:
         enabled: true
+  #引入rabbitmq
+  rabbitmq:
+    host: 192.168.99.100
+    port: 5672
+    username: luoxian
+    password: luoxian
+    listener:
+      simple:
+        concurrency: 10
+        max-concurrency: 20
+        prefetch: 5
+
 
 
 server:
