--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
 			<version>20180813</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>2.1.6.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
