--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,12 @@
 			<version>2.1.6.RELEASE</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 
 	</dependencies>
 
